--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.5",
+    "recharts": "^2.12.7",
     "three": "^0.169.0"
   },
   "devDependencies": {
