--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.21.3",
+    "classnames": "^2.5.1",
+    "i18next": "^23.15.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.5",
+    "react-i18next": "^15.0.2",
     "recharts": "^2.12.7",
     "three": "^0.169.0"
   },
