--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.3",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "i18next": "^23.15.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
