--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "test": "vitest --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@stylistic/eslint-plugin": "^2.9.0",
     "@tanstack/react-query": "^5.59.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
