--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/ui": "^2.1.2",
     "eslint": "^9.11.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.2.0",
