--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/three": "^0.169.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/ui": "^2.1.2",
+    "antd-style": "^3.7.1",
     "eslint": "^9.11.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
